# push_swap

./: CMakeLists.txt  Makefile  README.md  a.out  checker  from_the_article.c  ft_libft.c  main.c  push_swap  push_swap.h  result.txt  sort.c  text.txt  utils.c  validation.c
action/: push.c  reverce_rorate.c  reverce_rotate.c  rotate.c  swap.c
bonus/: checker.h  main.c
bonus/action/: push.c  reverce_rotate.c  rotate.c  swap.c
checker/: a.out  checker.h  main.c
checker/action/: reverce_rorate.c  swap.c
include/: push_swap.h
libft/: Makefile  ft_atoi_int.c  ft_error.c  ft_libft.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstfind.c  ft_lstfind_error.c  ft_lstfindmax.c  ft_lstfindmin.c  ft_lstiter.c  ft_lstmap.c  ft_lstmed.c  ft_lstnew.c  ft_split.c  ft_strcmp.c  libft.h
src/: main.c  sort.c  utils.c  validation.c
